# BenchmarkCSvsInteropUnityCUDA

./: .gitignore  .gitmodules  README.md  benchmark.py
PluginBenchmark/: .clang-tidy  .gitignore  CMakeLists.txt  PluginBenchmark.sublime-project
PluginBenchmark/Vendors/: CMakeLists.txt
PluginBenchmark/include/: action_fdm_waves.h  action_get_data.h  action_reduce.h  action_vector_add.h
PluginBenchmark/include/kernels/: fdm_waves.cuh  reduce.cuh  vector_add.cuh
PluginBenchmark/src/: action_fdm_waves.cpp  action_get_data.cpp  action_reduce.cpp  action_vector_add.cpp
PluginBenchmark/src/kernels/: fdm_waves.cu  reduce.cu  vector_add.cu
Result/: Readme.md  requirements.txt
Result/Sum Vector/: ProfilingResults-1000-DX11 - 1.csv  ProfilingResults-1000-DX11.csv  ProfilingResults-10000-DX11-2.csv  ProfilingResults-10000-GL.csv
Results/: Readme.md  main.py
Results/GetData/: ProfilingResults-1000-DX11 - 0.csv  ProfilingResults-1000-DX11 - 1.csv  ProfilingResults-1000-DX11 - 2.csv  ProfilingResults-1000-GL - 0.csv  ProfilingResults-1000-GL - 1.csv
Results/Results - 1000 Sample/: ProfilingResults - GetData - 1000 - Direct3D11.csv  ProfilingResults - GetData - 1000 - OpenGLCore.csv  ProfilingResults - Reduce - 1000 - Direct3D11.csv  ProfilingResults - Reduce - 1000 - OpenGLCore.csv  ProfilingResults - VectorAdd - 1000 - Direct3D11.csv  ProfilingResults - VectorAdd - 1000 - OpenGLCore.csv  ProfilingResults - WavesFDM - 1000 - Direct3D11.csv  ProfilingResults - WavesFDM - 1000 - OpenGLCore.csv
Results/Results - 10000 Sample/: ProfilingResults - GetData - 10000 - Direct3D11.csv  ProfilingResults - GetData - 10000 - OpenGLCore.csv  ProfilingResults - Reduce - 10000 - Direct3D11.csv  ProfilingResults - Reduce - 10000 - OpenGLCore.csv  ProfilingResults - VectorAdd - 10000 - Direct3D11.csv  ProfilingResults - WavesFDM - 10000 - Direct3D11.csv  ProfilingResults - WavesFDM - 10000 - OpenGLCore.csv  (+8 more)
UnityBenchmark/: .editorconfig  .gitignore
UnityBenchmark/Assets/: Config.json
(+51 files in other folders)
